2006-07-05 Erik Hjortsberg  <erik@katastrof.nu>

	* src/services/gui, src/services/image: removed obsolete code
	* src/components/ogre/EmberOgre.cpp: added more version info

2006-07-05 Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/EmberOgre.cpp: added some version info

2006-07-05 Erik Hjortsberg  <erik@katastrof.nu>

	* media/particle/sun.particle: fixed material
	
2006-07-05 Erik Hjortsberg  <erik@katastrof.nu>

	* media/materials/scripts/buildings.material, media/materials/scripts/environment.material, media/materials/scripts/vegetation.material, media/materials/splatting/alpha_splat.material, media/materials/splatting/shadersplat.material, media/materials/textures/smokecolors.png: updated media

2006-07-05 Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/modeldefinitions/characters.modeldef.xml, src/components/ogre/modeldefinitions/creatures.modeldef.xml, src/components/ogre/modeldefinitions/items.modeldef.xml: updated model definitions

2006-07-05 Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/TerrainEditor.cpp: we need to reload the pages after loading them
	* src/components/ogre/TerrainGenerator.cpp, src/components/ogre/TerrainShader.cpp: rearranged headers, mainly by using OgreIncludes.h so that we have better control of the inclusion of Ogre

2006-07-05 Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/SceneManagers/EmberSceneManager: removed obsolete scene manager

2006-07-04 Erik Hjortsberg  <erik@katastrof.nu>
