@@ -1,1 +1,0 @@
-server=http://amber.worldforge.org/WFUT/
