@@ -81,4 +81,6 @@ startuphelp=false
 avatarrotationupdatefrequency=250
 #the level of logging, either verbose|info|warning|failure|critical
 logginglevel = info
+#the latest version
+version=0.4.1
 
